[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rune-scan"
version = "0.1.0"
description = "Scan an MCP server's tool metadata for hidden instructions before you connect."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "marcusikk"}]
keywords = ["mcp", "security", "prompt-injection", "tool-poisoning", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
live = ["mcp>=1.10"]
dev = ["pytest>=7", "ruff>=0.5", "bandit>=1.7", "mcp>=1.10"]

[project.scripts]
rune = "rune.cli:main"

[project.urls]
Homepage = "https://github.com/marcusikk/rune"
Issues = "https://github.com/marcusikk/rune/issues"

[tool.hatch.build.targets.wheel]
packages = ["rune"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
